// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Login User Controller Snapshot Test delete expired unverified user 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Login User Controller Snapshot Test for blocked user. 1`] = `
{
  "body": {
    "message": "Looks like your account is blocked.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Login User Controller Snapshot Test for empty request body. 1`] = `
{
  "body": {
    "message": "Request body is required",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for incorrect password. 1`] = `
{
  "body": {
    "message": "Oops! you have entered incorrect password.",
    "success": false,
  },
  "status": 401,
}
`;

exports[`Login User Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while logging.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Login User Controller Snapshot Test for missing password. 1`] = `
{
  "body": {
    "message": "Both username and password is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for missing username. 1`] = `
{
  "body": {
    "message": "Both username and password is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Login User Controller Snapshot Test for successful login. 1`] = `
{
  "body": {
    "data": {
      "_id": "507f1f77bcf86cd799439011",
      "email": "test@gmail.com",
      "emailVerified": true,
      "fullName": "User Test",
      "isActive": true,
      "username": "test",
    },
    "message": "User logged-in successfully.",
    "success": true,
    "token": "mocked-jwt-token",
  },
  "status": 200,
}
`;

exports[`Login User Controller Snapshot Test for unverified email but not expired. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "User Test",
      "userId": "507f1f77bcf86cd799439011",
    },
    "message": "Oops! you have not verified your email yet.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Login User Controller Snapshot Test for user not exist. 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;
